@@ -18,7 +18,7 @@ OP_ExploreUnknown=0x0000			# used for unknown explorer
 
 # world packets
 # Required to reach Char Select:		
-OP_SendLoginInfo=0x13da				# C
+OP_SendLoginInfo=0x13da				# V
 OP_ApproveWorld=0x86c7				# C
 OP_LogServer=0x6f79					# C
 OP_SendCharInfo=0x4200				# C
@@ -38,16 +38,16 @@ OP_CharacterCreate=0x1b85			# C
 OP_RandomNameGenerator=0x440f		# C
 OP_ApproveName=0x4f1f				# C
 
-OP_MOTD=0x2b59						# C
-OP_SetChatServer=0x0479				# C
+OP_MOTD=0x7629						# C 0x2b59
+OP_SetChatServer=0x7d90				# C 0x0479
 OP_SetChatServer2=0x1ce3			# C
-OP_ZoneServerInfo=0x41c0			# C
+OP_ZoneServerInfo=0x1190			# C 0x41c0
 OP_WorldComplete=0x441c				# C
-OP_WorldUnknown001=0x77b1			# C
+OP_WorldUnknown001=0x6f9d			# C 0x77b1
 OP_FloatListThing=0x61ba			# C
 
 # Reasons for Disconnect:
-OP_ZoneUnavail=0x1190				# C
+OP_ZoneUnavail=0x3288				# C 0x1190
 OP_WorldClientReady=0x4786			# C
 OP_CharacterStillInZone=0x0000		# 
 OP_WorldChecksumFailure=0x0000		# 
@@ -60,15 +60,15 @@ OP_UserCompInfo=0x0000				#
 # OP_SendBaseDataChecksum=0x0000	# 
 
 # Zone in opcodes
-OP_AckPacket=0x3594					# C
-OP_ZoneEntry=0x4b61					# C
-OP_ReqNewZone=0x4118				# C
-OP_NewZone=0x43ac					# C
-OP_ZoneSpawns=0x7114				# C
-OP_PlayerProfile=0x6022				# C
-OP_TimeOfDay=0x6015					# C
-OP_LevelUpdate=0x6a99				# C
-OP_Stamina=0x3d86					# C
+OP_AckPacket=0x3594					# V
+OP_ZoneEntry=0x4b61					# V
+OP_ReqNewZone=0x4118				# V
+OP_NewZone=0x43ac					# V
+OP_ZoneSpawns=0x7114				# ?
+OP_PlayerProfile=0x6022				# V
+OP_TimeOfDay=0x6015					# V
+OP_LevelUpdate=0x6a99				# V
+OP_Stamina=0x3d86					# ?
 OP_LockoutTimerInfo=0x0000			# 
 OP_ZoneServerReady=0x0000			# 
 
@@ -80,40 +80,40 @@ OP_LogoutReply=0x0000				#
 OP_PreLogoutReply=0x0000			# 
 
 # Required to fully log in
-OP_SpawnAppearance=0x3e17			# C
-OP_TributeUpdate=0x684c				# C
+OP_SpawnAppearance=0x3e17			# V
+OP_TributeUpdate=0x684c				# V
 OP_TributeTimer=0x4895				# C
 OP_TaskDescription=0x156c			# C
 OP_TaskActivity=0x31f3				# C
 OP_CompletedTasks=0x6d27			# C
-OP_Weather=0x4658					# C
-OP_SendAATable=0x6ef9				# C 
-OP_UpdateAA=0x7bf6					# C 
-OP_RespondAA=0x2bad					# C 
-OP_ReqClientSpawn=0x69cd			# C
-OP_SpawnDoor=0x6f2b					# C
-OP_GroundSpawn=0x5c85				# C
-OP_SendZonepoints=0x2370			# C
-OP_SendAAStats=0x57a3				# C 
-OP_WorldObjectsSent=0x7b73			# C
-OP_BlockedBuffs=0x05d5				# C
-OP_SendExpZonein=0x47e7				# C
-OP_SendTributes=0x6bfb				# C
-OP_TributeInfo=0x5a67				# C
+OP_Weather=0x4658					# V
+OP_SendAATable=0x6ef9				# V 
+OP_UpdateAA=0x7bf6					# V 
+OP_RespondAA=0x1fbd					# C 0x2bad
+OP_ReqClientSpawn=0x69cd			# V
+OP_SpawnDoor=0x6f2b					# V
+OP_GroundSpawn=0x5c85				# V
+OP_SendZonepoints=0x2370			# V
+OP_SendAAStats=0x78b9				# C 
+OP_WorldObjectsSent=0x7b73			# V
+OP_BlockedBuffs=0x05d5				# V
+OP_SendExpZonein=0x47e7				# V
+OP_SendTributes=0x6bfb				# V
+OP_TributeInfo=0x5a67				# V
 OP_SendGuildTributes=0x5a01			# C
-OP_AAExpUpdate=0x4aa2				# C
-OP_ExpUpdate=0x0555					# C
-OP_HPUpdate=0x6145					# C
+OP_AAExpUpdate=0x4aa2				# V
+OP_ExpUpdate=0x0555					# V
+OP_HPUpdate=0x6145					# V
 OP_ManaChange=0x569a				# C
 OP_TGB=0x42ef						# C
-OP_SpecialMesg=0x016c				# C
+OP_SpecialMesg=0x016c				# V
 OP_GuildMemberList=0x51bc			# C
-OP_GuildMOTD=0x5658					# C
-OP_CharInventory=0x47ae				# C
-OP_WearChange=0x0400				# C
-OP_ClientUpdate=0x7062				# C
-OP_ClientReady=0x6cdc				# C
-OP_SetServerFilter=0x2d74			# C
+OP_GuildMOTD=0x5658					# V
+OP_CharInventory=0x47ae				# V
+OP_WearChange=0x0400				# V
+OP_ClientUpdate=0x7062				# V
+OP_ClientReady=0x6cdc				# V
+OP_SetServerFilter=0x2d74			# V
 
 # Guild Opcodes
 OP_GetGuildMOTD=0x189e				# C
@@ -162,9 +162,9 @@ OP_GMNameChange=0x565d				# C
 OP_GMLastName=0x3563				# C
 
 OP_InspectAnswer=0x4938				# C
-OP_Action2=0x7e4d					# C OP_Damage?
+OP_Action2=0x0000					# C OP_Damage?
 OP_BeginCast=0x0d5a					# C
-OP_BuffFadeMsg=0x569a				# C
+OP_BuffFadeMsg=0x0000				# C
 OP_ConsentResponse=0x6e47			# C
 OP_MemorizeSpell=0x8543				# C
 OP_SwapSpell=0x3fd2					# C
@@ -175,18 +175,18 @@ OP_SimpleMessage=0x5448				# C
 OP_Buff=0x7ea8						# C
 OP_Illusion=0x48f9					# C
 OP_MoneyOnCorpse=0x6546				# C
-OP_RandomReply=0x6cdc				# C
+OP_RandomReply=0x0000				# C
 OP_DenyResponse=0x7ce7				# C
 OP_SkillUpdate=0x7f01				# C
 OP_GMTrainSkillConfirm=0x7ae1		# C
 OP_RandomReq=0x777c					# C
-OP_Death=0x1b85						# C
+OP_Death=0x0000						# C
 OP_Bind_Wound=0x3969				# C
 OP_GMTraining=0x7b64				# C
 OP_GMEndTraining=0x3c02				# C
 OP_GMTrainSkill=0x7686				# C
 OP_Animation=0x47d3					# C
-OP_Begging=0x6d37					# C
+OP_Begging=0x0000					# C
 OP_Consent=0x6bb9					# C
 OP_ConsentDeny=0x01e3				# C
 OP_AutoFire=0x1bd4					# C
@@ -194,7 +194,7 @@ OP_PetCommands=0x3ad6				# C
 OP_DeleteSpell=0x0736				# C
 OP_Surname=0x7547					# C
 OP_ClearSurname=0x2edd				# C
-OP_FaceChange=0x5658				# C
+OP_FaceChange=0x0000				# C
 OP_SenseHeading=0x3887				# C
 OP_Action=0x2c27					# C
 OP_ConsiderCorpse=0x37a7			# C
@@ -202,7 +202,7 @@ OP_HideCorpse=0x1842
 OP_Bug=0x02b						# C
 OP_Feedback=0x0d1d					# C
 OP_Report=0x6884					# C
-OP_Damage=0x7e4d					# C or OP_Action2?
+OP_Damage=0x0000					# C or OP_Action2?
 OP_ChannelMessage=0x2e79			# C
 OP_Assist=0x2b59					# C
 OP_AssistGroup=0x5af6				# C
@@ -210,7 +210,7 @@ OP_MoveCoin=0x1fcd					# C
 OP_ZonePlayerToBind=0x1d3f			# C
 OP_KeyRing=0x0a18					# C
 OP_WhoAllRequest=0x177a				# C
-OP_WhoAllResponse=0x31f3			# C
+OP_WhoAllResponse=0x0000			# C
 OP_FriendsWho=0x6a90				# C
 OP_ConfirmDelete=0x3d00				# C
 OP_Logout=0x66e0					# C
@@ -229,7 +229,7 @@ OP_InitialMobHealth=0x2d25			# C
 OP_TargetHoTT=0x3ec7				# C
 OP_TargetBuffs=0x3df8
 OP_DeleteSpawn=0x3164				# C
-OP_AutoAttack=0x3d86				# C
+OP_AutoAttack=0x0000				# C
 OP_AutoAttack2=0x4ca1				# C
 OP_Consume=0x7ce4					# C
 OP_MoveItem=0x7f56					# C
@@ -261,13 +261,13 @@ OP_WeaponEquip1=0x719e				# C
 OP_WeaponEquip2=0x7b6e				# C
 OP_WeaponUnequip2=0x19a8			# C
 OP_ApplyPoison=0x405b				# C
-OP_Save=0x5c85						# C
+OP_Save=0x0000						# C
 OP_TestBuff=0x5fc7					# C
 OP_CustomTitles=0x1b26				# C
 OP_Split=0x53f9						# C
-OP_YellForHelp=0x6f79				# C
+OP_YellForHelp=0x0000				# C
 OP_LoadSpellSet=0x7113				# C
-OP_Bandolier=0x441c					# C
+OP_Bandolier=0x0000					# C
 OP_PotionBelt=0x5db5				# C
 OP_DuelResponse=0x1ebb				# C
 OP_SaveOnZoneReq=0x6eff				# C
@@ -308,9 +308,9 @@ OP_PVPLeaderBoardDetailsRequest=0x2a99	# C
 OP_PVPLeaderBoardDetailsReply=0x5156	# C
 OP_RestState=0x292f					# C
 OP_RespawnWindow=0x268c				# C	was 0x1643
-OP_DisciplineTimer=0x684c			# C
+OP_DisciplineTimer=0x0000			# C
 OP_LDoNButton=0x41b5				# C
-OP_SetStartCity=0x7bf6				# C
+OP_SetStartCity=0x0000				# C
 OP_VoiceMacroIn=0x31b1				# C
 OP_VoiceMacroOut=0x7880				# C
 OP_ItemViewUnknown=0x21c7			# C
@@ -324,7 +324,7 @@ OP_MobUpdate=0x0000					# Unused?
 
 # New Opcodes
 OP_SpawnPositionUpdate=0x4656		# 
-OP_ManaUpdate=0x4b61				#
+OP_ManaUpdate=0x0000				#
 OP_EnduranceUpdate=0x02d6			# 
 OP_MobManaUpdate=0x2ac1				#
 OP_MobEnduranceUpdate=0x6c5f		#
@@ -350,7 +350,7 @@ OP_BazaarInspect=0x0000				#
 OP_Bazaar=0x0000					# 
 
 # pc/npc trading
-OP_TradeRequest=0x47ae				# C
+OP_TradeRequest=0x0000				# C
 OP_TradeAcceptClick=0x064a			# C
 OP_TradeRequestAck=0x606a			# C
 OP_TradeCoins=0x0149				# C
@@ -373,7 +373,7 @@ OP_ItemVerifyReply=0x7866			# C
 OP_ShopPlayerSell=0x0b27			# C
 OP_ShopRequest=0x4194				# C
 OP_ShopEnd=0x3753					# C
-OP_ShopEndConfirm=0x7114			# C
+OP_ShopEndConfirm=0x0000			# C
 OP_ShopPlayerBuy=0x436a				# C
 OP_ShopDelItem=0x63c8				# C
 
@@ -421,8 +421,8 @@ OP_AdventureLeaderboardRequest=0x7537	# C
 OP_AdventureLeaderboardReply=0x7c87	# C
 
 # Group Opcodes
-OP_GroupDisband=0x47e7				# C
-OP_GroupInvite=0x5d32				# C
+OP_GroupDisband=0x0000				# C
+OP_GroupInvite=0x0000				# C
 OP_GroupFollow=0x321a				# C
 OP_GroupUpdate=0x21be
 OP_GroupUpdateB=0x7351
@@ -437,9 +437,9 @@ OP_GroupDisbandOther=0x162d
 OP_GroupLeaderChange=0x7545
 OP_GroupRoles=0x6b67
 # LFG/LFP Opcodes
-OP_LFGCommand=0x3288				# C
+OP_LFGCommand=0x0000				# C
 OP_LFGGetMatchesRequest=0x5613		# C
-OP_LFGGetMatchesResponse=0x7d90		# C
+OP_LFGGetMatchesResponse=0x0000		# C
 OP_LFPGetMatchesRequest=0x0479		# C
 OP_LFPGetMatchesResponse=0x16f5		# C
 OP_LFPCommand=0x710e				# C
