@@ -150,3 +150,155 @@ UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19639;
 UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19640;
 UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19677;
 UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19691;
+--
+-- IMPORTANT NOTE:
+--
+-- If you source in this SQL, then you should export a custom spell file and distribute it to the players on your server, otherwise
+-- the rest-state as displayed in the UI (SoF and SoD) may not reflect the rest-state as determined by the server.
+--
+-- All the spells that follow are those that allow rest-state regen IN THE SoD CLIENT.
+--
+-- If your server does not support accelerated rest-state regen, then you do not need this file.
+--
+-- The first set of spell IDs are within the range of the Titanium spell file.
+--
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 110;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 111;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 112;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 676;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 677;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 678;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 1577;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 1578;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 1699;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 1702;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 1704;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 1772;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 2464;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 2468;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 2473;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 2475;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 3342;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 3387;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 3395;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 3650;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 5051;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 5573;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 5984;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 5985;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 5986;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7023;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7024;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7025;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7026;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7800;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7801;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7802;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7803;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7804;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7805;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7806;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7807;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7808;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7809;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7810;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7811;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7812;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7813;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7814;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7815;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7816;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7817;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7818;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7819;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7820;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7821;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7822;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7823;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 7824;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 8012;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 8023;
+--
+-- Spells from SoF and SoD that have the same name in both clients.
+--
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 8963;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 9119;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 9120;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 9121;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 9980;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 9981;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 9982;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 10068;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 10069;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 10070;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 10608;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 10609;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 10610;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 10801;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 10825;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 10844;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 11656;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 11837;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 11848;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 11850;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 11882;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 11883;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 11884;
+
+-- Some of the following spells appear to have changed between SoF and SoD. You should not
+-- execute the following if you are not using a spells_new table generated from the SOD spells_us.txt
+-- without examining each spell to check if for your spells_new table, it should allow rest state.
+--
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 14488;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 14515;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 14516;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 14517;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 14659;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 14660;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 14661;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15074;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15329;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15330;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15331;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15414;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15437;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15454;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15489;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15503;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15551;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15552;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15553;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15557;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15558;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15559;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15563;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15564;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15565;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15569;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15570;
+-- UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 15571;
+--
+-- SoD only spells.
+--
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 16534;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 17607;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 18528;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 18573;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 18574;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 18575;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 18726;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 18727;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 18728;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19206;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19491;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19492;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19493;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19594;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19617;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19618;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19619;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19638;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19639;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19640;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19677;
+UPDATE `spells_new` SET `allowrest` = 1 WHERE `id` = 19691;
