@@ -1,1 +1,1 @@
-INSERT INTO commands VALUES ('cvs', 200, ' - Summary of client versions currently online.');
+INSERT INTO commands VALUES ('cvs', 200);
