@@ -2,6 +2,9 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 ==05/08/2010==
 Derision: Guild Bank fix.
+Trevius(Derision): Added special handling for certain types of opcodes to correct an issue on the Live client.
+Trevius: SoF/SoD - Type 5 clicky items can no longer be used if the character does not meet the race/class requirements of the item.
+Trevius: Live - Can now log in naked into empty zones.
 
 ==05/04/2010==
 Trevius(Derision): Fixed a potential crash related to Saylinks and Antispam code.
